# transcript-chunker

./: .gitignore  README.md  cli.py  pyproject.toml
examples/: sample_transcript.txt
src/transcript_chunker/: chunker.py  cli.py  parsers.py
src/transcript_chunker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
